--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+virtualbox-ext-pack (6.1.28-1kaisen) kaisen-packages; urgency=medium
+
+  * Import 6.1.28 version
+
+ -- Kevin Chevreuil - Kaisen <kaisen@kaisenlinux.org>  Thu, 21 Oct 2021 17:16:08 +0200
+
+virtualbox-ext-pack (6.1.28-1) unstable; urgency=medium
+
+  * New upstream version 6.1.28
+  * Update postinst file
+  * Bump std-version to 4.6.0
+
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 20 Oct 2021 09:39:34 +0200
+
+virtualbox-ext-pack (6.1.26-2) unstable; urgency=medium
+
+  * Add dependency on ca-certificates for https support (Closes: #991281)
+
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 18 Aug 2021 11:48:47 +0200
+
 virtualbox-ext-pack (6.1.26-1kaisen) kaisen-packages; urgency=medium
 
   * Fork to change default debconf template response
