--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+virtualbox-ext-pack (6.1.36-1kaisen) kaisen-packages; urgency=medium
+
+  * Rebuild for Virtualbox 6.1.36
+  * Update hash file
+  * Update control file
+
+ -- Kevin Chevreuil - Kaisen <kaisen@kaisenlinux.org>  Thu, 01 Sep 2022 00:29:37 +0100
+
+virtualbox-ext-pack (6.1.36-1) unstable; urgency=medium
+
+  * New upstream version 6.1.36
+  * Update postinst
+
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 21 Jul 2022 18:42:01 +0200
+
 virtualbox-ext-pack (6.1.34-1kaisen) kaisen-packages; urgency=medium
 
   * Rebuild for Virtualbox 6.1.34
